# monitor-avahi

./: .gitignore  Cargo.toml  PKGBUILD  README.md  monitor-avahi.service
src/: cli.rs  main.rs
