[package]
name = "monitor-avahi"
description = "Monitor/Restart avahi for invalid hostname"
repository = "https://github.com/tripplet/monitor-avahi.git"
version = "1.2.3"
authors = ["Tobias Tangemann <tobias@tangemann.org>"]
edition = "2021"

[dependencies]
hostname = "^0.3"
clap = { version = "^3.1", features = ["derive", "env"] }
dbus = "^0.9"
log = "^0.4"
simple_logger = "^2.1"

[profile.release]
#debug = true
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = "symbols"
